--- a/mainjupyter.ipynb
+++ b/mainjupyter.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import streamlit as st\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "#import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "st.title(\"Conociendo el desempeño de los colaboradores del área de Marketing de Socialize your Knowledge\")\n",
@@ -37,7 +37,7 @@
     "\n",
     "# Desplegar un control para seleccionar el género del empleado\n",
     "gender_options = st.sidebar.selectbox('Seleccione el género del empleado', data['gender'].unique())\n",
-    "data = data[data['gender'] == gender_options]\n",
+    "#data = data[data['gender'] == gender_options]\n",
     "\n",
     "# Desplegar un control para seleccionar un rango del puntaje de desempeño del empleado\n",
     "performance_options = st.sidebar.slider('Seleccione el rango del puntaje de desempeño del empleado', 1, 5, (1, 5))\n",
@@ -48,14 +48,16 @@
     "data = data[data['marital_status'] == marital_options]\n",
     "\n",
     "# Gráfico para visualizar la distribución de los puntajes de desempeño\n",
-    "plt.hist(data['performance_score'], bins=5)\n",
+    "fig1, x1 = plt.subplots()\n",
+    "x1 = plt.hist(data['performance_score'], bins=5)\n",
     "plt.xlabel('Puntaje de desempeño')\n",
     "plt.ylabel('Numero de empleados')\n",
     "plt.title('Distribución de los puntajes de desempeño')\n",
-    "st.pyplot()\n",
+    "st.pyplot(fig1)\n",
     "\n",
     "# Gráfico para visualizar el promedio de horas trabajadas por el género del empleado\n",
     "# data_grouped = data.groupby('gender').mean()\n",
+    "#fig2, x2 = plt.subplots()\n",
     "data_grouped = data.groupby('gender').mean(numeric_only=True)\n",
     "data_grouped.reset_index(inplace=True)\n",
     "data_grouped.plot.bar(x='gender', y='average_work_hours', rot=0)\n",
@@ -65,18 +67,27 @@
     "st.pyplot()\n",
     "\n",
     "# Gráfico para visualizar la edad de los empleados con respecto al salario de estos\n",
-    "plt.scatter(data['age'], data['salary'])\n",
+    "fig3, x3 = plt.subplots()\n",
+    "x3 = plt.scatter(data['age'], data['salary'])\n",
     "plt.xlabel('Edad')\n",
     "plt.ylabel('Salario')\n",
     "plt.title('Edad de los empleados con respecto al salario')\n",
-    "st.pyplot()\n",
+    "st.pyplot(fig3)\n",
     "\n",
     "# Gráfico para visualizar la relación del promedio de horas trabajadas versus el puntaje de desempeño\n",
-    "plt.scatter(data['average_work_hours'], data['performance_score'])\n",
+    "fig4, x4 = plt.subplots()\n",
+    "x4 = plt.scatter(data['average_work_hours'], data['performance_score'])\n",
     "plt.xlabel('Promedio de horas trabajadas')\n",
     "plt.ylabel('Puntaje de desempeño')\n",
     "plt.title('Relación del promedio de horas trabajadas versus el puntaje de desempeño')\n",
-    "st.pyplot()"
+    "st.pyplot(fig4)\n",
+    "\n",
+    "# Conclusión sobre el análisis mostrado en la aplicación web\n",
+    "st.markdown('En base a los datos mostrados en los gráficos y estadísticas, se pueden observar las siguientes conclusiones: '\n",
+    "            '- Los puntajes de desempeño no se distribuyen de manera equitativa entre los empleados, concentrándose la mayor parte en el puntaje de desempeño 3. '\n",
+    "            '- El promedio de horas trabajadas por los empleados es similar tanto para hombres como para mujeres. '\n",
+    "            '- La edad de los empleados no parece estar relacionada de manera significativa con el salario que reciben. '\n",
+    "            '- Se observa una relación clara entre el promedio de horas trabajadas y el puntaje de desempeño de los empleados. ')"
    ]
   }
  ],
